--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@types/react": "18.2.20",
 		"@types/react-dom": "18.2.7",
 		"antd": "^5.8.4",
+		"cookie-cutter": "^0.2.0",
 		"eslint": "8.47.0",
 		"eslint-config-next": "13.4.19",
 		"next": "13.4.19",
